# minimal-subsequential-transducer

./: .gitignore  CMakeLists.txt  README.md
include/: FileUtils.h  StateHashes.h  StateSignature.h  TestUtils.h  Transducer.h  TransducerCreator.h  creator2.h  test.h
src/: CMakeLIsts.txt  FileUtils.cpp  StateHashes.cpp  StateSignature.cpp  TestUtils.cpp  Transducer.cpp  TransducerCreator.cpp  main.cpp  test.cpp
test_simple/: t1.csv
